Fixing Spacing for sections

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 20px 0px;
+  min-height: 100vh;
   text-align: center;
 }
 
